# geoqb

./: .dockerignore  .env.example  .env.local  ARCHITECTURE.md  AUDIT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEVELOPMENT.md  MARKETING_PLAN.md  MARKET_RESEARCH.md  MODULES.md  MONETIZATION.md  Makefile  PR_DESCRIPTION.md  PR_QUICKSTART.md  QUICKSTART.md  README.docker.md  README.md  README_NEW.md  SAAS_IMPLEMENTATION_GUIDE.md  SAAS_README.md  SAAS_TRANSFORMATION_PLAN.md  SECURITY.md  TEST_LOCALLY.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  start.bat  start.sh
.github/workflows/: backend-ci.yml  ci.yml  codeql-analysis.yml  frontend-ci.yml
MANUALS/: DEVELOPER_JOURNEY.md  GETTING_STARTED.md  PROPOSED_FEATURES.md  README.md
docker/: Dockerfile.backend  Dockerfile.frontend
docker/app/: __init__.py  main.py
geoqb-api/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pytest.ini  requirements.txt
geoqb-api/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
geoqb-api/tests/: __init__.py  conftest.py  test_auth.py  test_layers.py  test_user_flows.py  test_workspaces.py
geoqb-web/: .dockerignore  Dockerfile  Dockerfile.dev  package.json  tailwind.config.ts
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  secrets.yaml.example
pyGeoQB/: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  tempDUMP.tsv
pyGeoQB/docs/: GeoQB Reloaded.graffle  (+6 more)
terraform/: main.tf  outputs.tf  variables.tf
(+94 files in other folders)
