[tool.poetry]
name = "pyGeoQB"
version = "0.0.1"
description = "Multilayer graph management."

[tool.semantic_release]
version_variable = [
    "pyGeoQB/geoanalysis/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
